# songs-ui

./: index.html  main.js  note_rendering.js  package-lock.json  package.json  phrase_ui.js  project_data.js  renderer.js  utils.js
codecophony-render-gui/: README.md  package.json
codecophony-render-gui/lib/: index.js
codecophony-render-gui/native/: Cargo.toml
codecophony-render-gui/native/src/: lib.rs
