[package]
name = "codecophony-render-gui"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "codecophony_render_gui"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.20"

[dependencies]
neon = "0.1.20"
songs = {path="/n/codecophony-share-build/songs"}
